#65 - fix dashboard widget layout breaking due to long task descriptions

--- a/assets/styles/scss/components/task/_TaskRow.scss
+++ b/assets/styles/scss/components/task/_TaskRow.scss
@@ -52,6 +52,7 @@
 			white-space: pre-wrap;
 			margin-top: 0.7em;
 			color: color(grey-darker);
+			word-break: break-word;
 		}
 	}
 
